@@ -72,6 +72,7 @@ setup(name=PACKAGE,
         'simplejson': ['simplejson'],
         'cdecimal': ['cdecimal'],
         'Levenshtein': ['python-Levenshtein'],
+        'BCrypt': ['bcrypt'],
         },
     zip_safe=False,
     test_suite='trytond.tests',
