@@ -1,3 +1,4 @@
+* Use bcrypt to hash password if possible
 * Use a sequence of ids, values to set fields
 * Client side actions on button and wizard
 * Add depends attribute to data tag
